@@ -1,3 +1,9 @@
+2010-06-01 j.m.reneau <renejm@users.sourceforge.net> 0.9.6l
+	* fixed help display path when windows installed.
+	* added getslice, putslice, and imgload into syntax highlighter
+	* changed imgload from 0.9.6k to place the center of the image at the specified coordinates
+	* added rotate and scale parameters to imgload like stamp
+
 2010-05-31 j.m.reneau <renejm@users.sourceforge.net> 0.9.6k
 	* added imgload statement to load a bmp, gif, jpg, or pgn from a file and siaplsy it on the graphics output window
 	* compiled new ru translation from Sergey
